--- a/about.html
+++ b/about.html
@@ -87,9 +87,8 @@
     </div>
     <div class="card mb-3 border-0 ">
         <div class="row g-0">
-            <div class="col-md-4 ">
-                <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid text-center rounded-start"
-                    alt="...">
+            <div class="offset-md-8 col-md-4 ">
+                <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="">
                 <div class="card-body">
