--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="icons-1.9.1/icons-1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>bootstrap</title>
 </head>
 
 <body>
 
-    <!-- navbar  -->
+    <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -62,51 +62,187 @@
         </div>
     </nav>
 
+    <!-- navbar end  -->
 
-    <div class="card mb-3 border-0">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="img/2020_6_largeimg_2106819729-removebg-preview.png" class="img-fluid rounded-start"
-                    alt="...">
-            </div>
-            <div class="">
-                <div class="card-body">
-                    <h4 class="card-title">Web Developer</h4>
-                    <p class="card-text">Our website builder helps bring your unique vision to life—no design or code
-                        experience required. Create a customizable, mobile-optimized website within the hour. All you
-                        need to start is a domain name and a vision for your website. If you're building a small
-                        business website, online store, or otherwise, Mailchimp can simplify the process
-                        experience required. Create a customizable, mobile-optimized website within the hour. All you
-                        need to start is a domain name and a vision for your website. If you're building a small
-                        business website, online store, or otherwise, Mailchimp can simplify the process.</p>
-                    <a href="web.html" class="btn btn-primary">Read More</a>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card mb-3 border-0 ">
-        <div class="row g-0">
-            <div class="offset-md-8 col-md-4 ">
-                <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="">
-                <div class="card-body">
-                    <h4 class="card-title">App Developer</h4>
-                    <p class="card-text">Our website builder helps bring your unique vision to life—no design or code
-                        experience required. Create a customizable, mobile-optimized website within the hour. All you
-                        need to start is a domain name and a vision for your website. If you're building a small
-                        business website, online store, or otherwise, Mailchimp can simplify the process
-                        experience required. Create a customizable, mobile-optimized website within the hour. All you
-                        need to start is a domain name and a vision for your website. If you're building a small
-                        business website, online store, or otherwise, Mailchimp can simplify the process.</p>
-                    <a href="app.html" class="btn btn-primary">Read More</a>
-
-                </div>
-            </div>
+    <!-- about start  -->
+    <div class="abouthead container-fluid my-1 py-5">
+        <div class="text-white text-center">
+            <h1 class="display-3">Web Developer</h1>
+            <ul>
+                <li class="text-white fs-3 p-2 d-inline linestyle "><a href="index.html"></a>Home</li>
+                <li class="text-white fs-3 p-2 d-inline linestyle"><a href="contact.html"></a>Contact</li>
+            </ul>
         </div>
     </div>
 
+    <main class="my-1 ">
+        <!-- about content  -->
+        <!-- about first con. start -->
+        <div class="container-fluid wow fadeInUp mb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-7">
+                        <div class="section-title mt-4 mb-2">
+                            <h1 class="position-relative d-inline-block text-dark text-uppercase ">Web Developer
+                            </h1>
+                        </div>
+                        <p class="text-primary display-5 mb-lg-4">Web Developer is good Digser</p>
+                        <h4 class="fst-italic mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Praesentium sint harum nihil, inventore cupiditate accusantium.
+                        </h4>
+                        <p class="mb-4"> <span class="fw-bold fs-4 text-uppercase">Lorem</span> ipsum dolor sit amet
+                            consectetur
+                            adipisicing
+                            elit. Aut cupiditate
+                            perferendis
+                            omnis molestiae in minima quasi, esse modi. Architecto quo cupiditate ex alias. Quo
+                            atque,
+                            facilis
+                            suscipit fugiat aperiam harum quos adipisci at perspiciatis velit nobis officiis enim?
+                            Consequuntur,
+                            voluptatibus?
+                            suscipit fugiat aperiam harum quos adipisci at perspiciatis velit nobis officiis enim?
+                            Consequuntur,
+                            voluptatibus?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda optio hic voluptatem
+                            ipsam
+                            consectetur labore laborum quas totam odio mollitia voluptate a rem deserunt unde
+                            explicabo
+                            inventore consequatur, commodi repellendus temporibus libero exercitationem. Numquam,
+                            distinctio?
+                        </p>
+                        <a href="web.html" class="btn btn-primary">Read More</a>
+                    </div>
+                    <div class="col-md-12 col-lg-5 mt-lg-5" style="object-fit: cover;">
+                        <img src="img/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg"
+                            class="img-fluid mt-lg-2 rounded-start " style="height:55vh;" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- about first con. end -->
+
+        <div class="card mx-3">
+            <div class="card-header text-center">
+                <h5>Best Web Developer</h5>
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Ajaypal Singh
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+
+        <!-- about sec. cont. start  -->
+
+
+        <div class="container-fluid wow fadeInUp mb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-7">
+                        <div class="section-title mt-4 mb-2">
+                            <h1 class="position-relative d-inline-block text-dark text-uppercase ">App Developer
+                            </h1>
+                        </div>
+                        <p class="text-primary display-5 mb-lg-4">App Developer is good Design</p>
+                        <h4 class="fst-italic mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Praesentium sint harum nihil, inventore cupiditate accusantium.
+                        </h4>
+                        <p class="mb-4"> <span class="fw-bold fs-4 text-uppercase">Lorem</span> ipsum dolor sit amet
+                            consectetur
+                            adipisicing
+                            elit. Aut cupiditate
+                            perferendis
+                            omnis molestiae in minima quasi, esse modi. Architecto quo cupiditate ex alias. Quo
+                            atque,
+                            facilis
+                            suscipit fugiat aperiam harum quos adipisci at perspiciatis velit nobis officiis enim?
+                            Consequuntur,
+                            voluptatibus?
+                            suscipit fugiat aperiam harum quos adipisci at perspiciatis velit nobis officiis enim?
+                            Consequuntur,
+                            voluptatibus?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda optio hic voluptatem
+                            ipsam
+                            consectetur labore laborum quas totam odio mollitia voluptate a rem deserunt unde
+                            explicabo
+                            inventore consequatur, commodi repellendus temporibus libero exercitationem. Numquam,
+                            distinctio?
+                        </p>
+                        <a href="web.html" class="btn btn-primary">Read More</a>
+                    </div>
+                    <div class="col-md-12 col-lg-5 mt-lg-5" style="object-fit: cover;">
+                        <img src="img/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg"
+                            class="img-fluid mt-lg-2 rounded-start " style="height:55vh;" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- about sec. cont. end  -->
+    </main>
+
+
+    <!-- footer start  -->
+    <footer class="bg-dark text-white pb-1 ">
+        <div class="container-fluid row pt-4">
+            <div class="col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="ps-4">Links</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> About </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Contact </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <h3 class="ps-4">Services</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Web Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> App Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Mern Project </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Online Classes</li>
+                </ul>
+            </div>
+            <div class="fadd col-lg-3 col-md-6 col-sm-6">
+                <h3>Address</h3>
+                <address>
+                    <div>
+                        <p><i class="bi bi-building "> </i>Shree Ram Colony West Jaipur Raj.</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-telephone "> </i>9649302987</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-envelope "> </i>ajaypal2987@gmail.com</p>
+                    </div>
+                </address>
+            </div>
+            <div class="container col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="text-center">Follw Us</h3>
+                <div class="ficons text-center">
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-youtube"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-instagram"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-facebook"></i></a>
+                </div>
+
+            </div>
+        </div>
+        <div class="fcredit text-center">
+            <p>
+                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
+            </p>
+        </div>
+    </footer>
+
+    <!-- footer end  -->
 
 </body>
 
