--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> -->
     <link rel="stylesheet" href="icons-1.9.1/icons-1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>bootstrap</title>
@@ -62,6 +61,12 @@
             </div>
         </div>
     </nav>
+
+
+    <!-- navbar end  -->
+
+
+    <!-- form start  -->
     <div class="row justify-content-center bg-dark mx-2 my-3 rounded-3 text-light">
         <div class="col-md-6 col-12 align-self-center">
             <form class="  ms-2 my-3 ">
@@ -104,6 +109,8 @@
             </form>
         </div>
     </div>
+
+    <!-- form end -->
 </body>
 
 </html>
