--- a/project.html
+++ b/project.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="icons-1.9.1/icons-1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>bootstrap</title>
 </head>
 
 <body>
-
-    <!-- navbar  -->
+    <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -62,75 +61,149 @@
         </div>
     </nav>
 
-    <h2 class="text-center mt-5 mb-3">My Project Progress </h2>
+    <!-- navbar end -->
 
-    <div class="mx-4">
-        <h2>Web Development Project Ideas</h2>
 
-        <p>With digital presence becoming a necessity for brands to expand and gain exposure among potential customers,
-            the
-            web
-            development industry is taking off rapidly, and so is the demand for Web Developers. In fact, web
-            development
-            has
-            emerged as a promising field right now, attracting aspirants from all educational and professional
-            backgrounds.
-            As
-            industries continue facing fierce competition among fellow brands and services, the ones keeping up with
-            trends
-            steal the limelight. The severe expansion of digitally engaged audiences has proved that web development is
-            no
-            more
-            a choice but a necessity to reach a broader customer base, increase engagement and promote services.
-        </p>
+    <!-- progress start  -->
+    <div>
+        <h2 class="text-center mt-2 mb-3 card-header text-primary text-uppercase ">My Project Progress </h2>
     </div>
-    <div class="my-4 mx-4">
-        <h5>E-Commerce Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
-                aria-valuemin="0" aria-valuemax="100">10%</div>
+    <!-- progress end  -->
+
+
+    <!-- images start  -->
+    <div class="row col-12">
+        <div class="col-lg-6 col-sm-6 ">
+            <img src="img/Work_7-removebg-preview.png" class="img-fluid ms-4" style="height: 60vh;" alt="...">
         </div>
-        <h5>Java-Script Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+        <div class="col-lg-6 col-sm-6">
+            <img src="img/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg"
+                class="img-fluid " style="height: 55vh;" alt="...">
         </div>
-        <h5>Bootstrap Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-        </div>
-        <h5>Hospital Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-        </div>
-        <h5>Hospital Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-        </div>
-        <!-- <h5>E-Commerce Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar " role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">25%</div>
-        </div>
-        <h5>Java-Script Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">50%</div>
-        </div>
-        <h5>Bootstrap Project</h5>
-        <div class="progress mb-4">
-            <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">75%</div>
-        </div>
-        <div class="progress mb-4">
-            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0"
-                aria-valuemax="100">100%</div>
-        </div> -->
     </div>
 
+    <!-- imgage end  -->
+
+
+    <!-- ideas start  -->
+
+
+    <div>
+        <div class="mx-4">
+            <div>
+                <h2 class="text-primary fst-italic mt-4">Web Development Project Ideas</h2>
+            </div>
+            <p><span class="fs-1 fst-italic ">Developer</span> With digital presence becoming a necessity for brands
+                to
+                expand
+                and gain exposure among potential customers,
+                the
+                web
+                development industry is taking off rapidly, and so is the demand for Web Developers. In fact, web
+                development
+                has
+                emerged as a promising field right now, attracting aspirants from all educational and professional
+                backgrounds.
+                As
+                industries continue facing fierce competition among fellow brands and services, the ones keeping up
+                with
+                trends
+                steal the limelight. The severe expansion of digitally engaged audiences has proved that web
+                development is
+                no
+                more
+                a choice but a necessity to reach a broader customer base, increase engagement and promote services.
+            </p>
+        </div>
+        <div class="my-4 mx-4">
+            <h5>E-Commerce Project</h5>
+            <div class="progress mb-4">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
+                    aria-valuemin="0" aria-valuemax="100">10%</div>
+            </div>
+            <h5>Java-Script Project</h5>
+            <div class="progress mb-4">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
+                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+            <h5>Bootstrap Project</h5>
+            <div class="progress mb-4">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
+                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+            </div>
+            <h5>Hospital Project</h5>
+            <div class="progress mb-4">
+                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+            </div>
+            <h5>HTML CSS Project</h5>
+            <div class="progress mb-4">
+                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+                    aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+            </div>
+
+        </div>
+    </div>
+    <!-- ideas end  -->
+
+
+    <!-- footer start  -->
+
+    <footer class="bg-dark text-white pb-1 ">
+        <div class="container-fluid row pt-4">
+            <div class="col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="ps-4">Links</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> About </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Contact </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <h3 class="ps-4">Services</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Web Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> App Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Mern Project </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Online Classes</li>
+                </ul>
+            </div>
+            <div class="fadd col-lg-3 col-md-6 col-sm-6">
+                <h3>Address</h3>
+                <address>
+                    <div>
+                        <p><i class="bi bi-building "> </i>Shree Ram Colony West Jaipur Raj.</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-telephone "> </i>9649302987</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-envelope "> </i>ajaypal2987@gmail.com</p>
+                    </div>
+                </address>
+            </div>
+            <div class="container col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="text-center">Follw Us</h3>
+                <div class="ficons text-center">
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-youtube"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-instagram"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-facebook"></i></a>
+                </div>
+
+            </div>
+        </div>
+        <div class="fcredit text-center">
+            <p>
+                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
+            </p>
+        </div>
+    </footer>
+
+    <!-- footer end  -->
 
 </body>
 
