--- a/web.html
+++ b/web.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="icons-1.9.1/icons-1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>bootstrap</title>
 </head>
 
 <body>
 
-    <!-- navbar  -->
+    <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -62,41 +62,172 @@
             </div>
         </div>
     </nav>
+    <!-- navbar end -->
 
-    <div class="card border-0">
-        <div class="card-body">
-            <p class="card-text ">Our website builder helps bring your unique vision to life—no design or code
-                experience required. Create a customizable, mobile-optimized website within the hour. All you
-                need to start is a domain name and a vision for your website. If you're building a small
-                business website, online store, or otherwise, Mailchimp can simplify the process
-                experience required. Create a customizable, mobile-optimized website within the hour. All you
-                need to start is a domain name and a vision for your website. If you're building a small
-                business website, online store, or otherwise, Mailchimp can simplify the process.</p>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                More
-            </button>
+    <!-- card start -->
+    <main>
+        <div class="card mb-3 border-0">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="img/2020_6_largeimg_2106819729-removebg-preview.png" class="img-fluid rounded-start"
+                        alt="...">
+                </div>
+                <div class="">
+                    <div class="card-body">
+                        <h4 class="card-title">Web Developer</h4>
+                        <p class="card-text">Our website builder helps bring your unique vision to life—no design or
+                            code
+                            experience required. Create a customizable, mobile-optimized website within the hour.
+                            All
+                            you
+                            need to start is a domain name and a vision for your website. If you're building a small
+                            business website, online store, or otherwise, Mailchimp can simplify the process
+                            experience required. Create a customizable, mobile-optimized website within the hour.
+                            All
+                            you
+                            need to start is a domain name and a vision for your website. If you're building a small
+                            business website, online store, or otherwise, Mailchimp can simplify the process.</p>
+                        <!-- <a href="web.html" class="btn btn-primary">Read More</a> -->
 
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            Thank You Vigt My Web Side
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Read More
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Thank You Vigt My Web Side
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="card mb-3 border-0 ">
+            <div class="row g-0">
+                <div class="offset-md-8 col-md-4 ">
+                    <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="">
+                    <div class="card-body">
+                        <h4 class="card-title">App Developer</h4>
+                        <p class="card-text">Our website builder helps bring your unique vision to life—no design or
+                            code
+                            experience required. Create a customizable, mobile-optimized website within the hour.
+                            All
+                            you
+                            need to start is a domain name and a vision for your website. If you're building a small
+                            business website, online store, or otherwise, Mailchimp can simplify the process
+                            experience required. Create a customizable, mobile-optimized website within the hour.
+                            All
+                            you
+                            need to start is a domain name and a vision for your website. If you're building a small
+                            business website, online store, or otherwise, Mailchimp can simplify the process.</p>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Read More
+                        </button>
 
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Thank You Vigt My Web Side
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- card end -->
+
+
+    <!-- footer start  -->
+    <footer class="bg-dark text-white pb-1 ">
+        <div class="container-fluid row pt-4">
+            <div class="col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="ps-4">Links</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> About </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Contact </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <h3 class="ps-4">Services</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Web Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> App Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Mern Project </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Online Classes</li>
+                </ul>
+            </div>
+            <div class="fadd col-lg-3 col-md-6 col-sm-6">
+                <h3>Address</h3>
+                <address>
+                    <div>
+                        <p><i class="bi bi-building "> </i>Shree Ram Colony West Jaipur Raj.</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-telephone "> </i>9649302987</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-envelope "> </i>ajaypal2987@gmail.com</p>
+                    </div>
+                </address>
+            </div>
+            <div class="container col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="text-center">Follw Us</h3>
+                <div class="ficons text-center">
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-youtube"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-instagram"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-facebook"></i></a>
+                </div>
+
+            </div>
+        </div>
+        <div class="fcredit text-center">
+            <p>
+                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
+            </p>
+        </div>
+    </footer>
+
+
+    <!-- footer end  -->
 </body>
 
 </html>
