--- a/about.html
+++ b/about.html
@@ -75,10 +75,9 @@
         </div>
     </div>
 
-    <main class="my-1 ">
-        <!-- about content  -->
+    <main class="my-1 section-bg">
         <!-- about first con. start -->
-        <div class="container-fluid wow fadeInUp mb-5">
+        <div class="container-fluid wow fadeInUp mb-5 ">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-7">
@@ -140,7 +139,7 @@
         <!-- about sec. cont. start  -->
 
 
-        <div class="container-fluid wow fadeInUp mb-5">
+        <div class="container-fluid wow fadeInUp">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-7">
@@ -235,11 +234,7 @@
 
             </div>
         </div>
-        <div class="fcredit text-center">
-            <p>
-                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
-            </p>
-        </div>
+
     </footer>
 
     <!-- footer end  -->
