--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
 
     <!-- form start  -->
-    <div class="row justify-content-center bg-dark mx-2 my-3 rounded-3 text-light">
+    <div class="row justify-content-center mx-3 my-4 rounded-3 text-dark section-bg">
         <div class="col-md-6 col-12 align-self-center">
             <form class="  ms-2 my-3 ">
                 <p class="h4 mb-5 text-uppercase">Contact Information</p>
@@ -111,6 +111,64 @@
     </div>
 
     <!-- form end -->
+
+
+    <!-- footer start  -->
+    <footer class="bg-dark text-white pb-1 ">
+        <div class="container-fluid row pt-4">
+            <div class="col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="ps-4">Links</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> About </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Contact </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Home </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <h3 class="ps-4">Services</h3>
+                <ul style="list-style: none;">
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Web Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> App Development </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Mern Project </li>
+                    <li><i class="bi bi-arrow-right"></i><a href="#"></a> Online Classes</li>
+                </ul>
+            </div>
+            <div class="fadd col-lg-3 col-md-6 col-sm-6">
+                <h3>Address</h3>
+                <address>
+                    <div>
+                        <p><i class="bi bi-building "> </i>Shree Ram Colony West Jaipur Raj.</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-telephone "> </i>9649302987</p>
+                    </div>
+                    <div>
+                        <p><i class="bi bi-envelope "> </i>ajaypal2987@gmail.com</p>
+                    </div>
+                </address>
+            </div>
+            <div class="container col-lg-3 col-md-6 col-sm-6 ">
+                <h3 class="text-center">Follw Us</h3>
+                <div class="ficons text-center">
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-youtube"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-instagram"></i></a>
+                    <a class="text-white btn fs-3" href="https://www.youtube.com" target="_blank"><i
+                            class="bi bi-facebook"></i></a>
+                </div>
+
+            </div>
+        </div>
+        <!-- <div class="fcredit text-center">
+            <p>
+                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
+            </p>
+        </div> -->
+    </footer>
+
+    <!-- footer end  -->
 </body>
 
 </html>
