--- a/project.html
+++ b/project.html
@@ -63,90 +63,90 @@
 
     <!-- navbar end -->
 
-
-    <!-- progress start  -->
-    <div>
-        <h2 class="text-center mt-2 mb-3 card-header text-primary text-uppercase ">My Project Progress </h2>
-    </div>
-    <!-- progress end  -->
-
-
-    <!-- images start  -->
-    <div class="row col-12">
-        <div class="col-lg-6 col-sm-6 ">
-            <img src="img/Work_7-removebg-preview.png" class="img-fluid ms-4" style="height: 60vh;" alt="...">
+    <main class="section-bg">
+        <!-- progress start  -->
+        <div>
+            <h2 class="text-center mt-2 mb-3 card-header text-primary text-uppercase ">My Project Progress </h2>
         </div>
-        <div class="col-lg-6 col-sm-6">
-            <img src="img/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg"
-                class="img-fluid " style="height: 55vh;" alt="...">
+        <!-- progress end  -->
+
+
+        <!-- images start  -->
+        <div class="row col-12">
+            <div class="col-lg-6 col-sm-6 d-flex justify-content-center align-items-center ">
+                <img src="img/Work_7-removebg-preview.png" id="projectimg" class="img-fluid ms-lg-4"
+                    style="height: 60vh;" alt="...">
+            </div>
+            <div class="col-lg-6 col-sm-6 ">
+                <img src="img/img2.png" id="projectimg" class="img-fluid ms-sm-4" style="height: 53vh;" alt="...">
+            </div>
         </div>
-    </div>
 
-    <!-- imgage end  -->
-
-
-    <!-- ideas start  -->
+        <!-- imgage end  -->
 
 
-    <div>
-        <div class="mx-4">
-            <div>
-                <h2 class="text-primary fst-italic mt-4">Web Development Project Ideas</h2>
+        <!-- ideas start  -->
+
+
+        <div>
+            <div class="mx-4">
+                <div>
+                    <h2 class="text-primary fst-italic mt-4">Web Development Project Ideas</h2>
+                </div>
+                <p><span class="fs-1 fst-italic ">Developer</span> With digital presence becoming a necessity for brands
+                    to
+                    expand
+                    and gain exposure among potential customers,
+                    the
+                    web
+                    development industry is taking off rapidly, and so is the demand for Web Developers. In fact, web
+                    development
+                    has
+                    emerged as a promising field right now, attracting aspirants from all educational and professional
+                    backgrounds.
+                    As
+                    industries continue facing fierce competition among fellow brands and services, the ones keeping up
+                    with
+                    trends
+                    steal the limelight. The severe expansion of digitally engaged audiences has proved that web
+                    development is
+                    no
+                    more
+                    a choice but a necessity to reach a broader customer base, increase engagement and promote services.
+                </p>
             </div>
-            <p><span class="fs-1 fst-italic ">Developer</span> With digital presence becoming a necessity for brands
-                to
-                expand
-                and gain exposure among potential customers,
-                the
-                web
-                development industry is taking off rapidly, and so is the demand for Web Developers. In fact, web
-                development
-                has
-                emerged as a promising field right now, attracting aspirants from all educational and professional
-                backgrounds.
-                As
-                industries continue facing fierce competition among fellow brands and services, the ones keeping up
-                with
-                trends
-                steal the limelight. The severe expansion of digitally engaged audiences has proved that web
-                development is
-                no
-                more
-                a choice but a necessity to reach a broader customer base, increase engagement and promote services.
-            </p>
+            <div class="my-4 mx-4">
+                <h5>E-Commerce Project</h5>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%"
+                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
+                </div>
+                <h5>Java-Script Project</h5>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
+                        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                </div>
+                <h5>Bootstrap Project</h5>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
+                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                </div>
+                <h5>Hospital Project</h5>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
+                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                </div>
+                <h5>HTML CSS Project</h5>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                </div>
+
+            </div>
         </div>
-        <div class="my-4 mx-4">
-            <h5>E-Commerce Project</h5>
-            <div class="progress mb-4">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
-                    aria-valuemin="0" aria-valuemax="100">10%</div>
-            </div>
-            <h5>Java-Script Project</h5>
-            <div class="progress mb-4">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-            </div>
-            <h5>Bootstrap Project</h5>
-            <div class="progress mb-4">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-            </div>
-            <h5>Hospital Project</h5>
-            <div class="progress mb-4">
-                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-            </div>
-            <h5>HTML CSS Project</h5>
-            <div class="progress mb-4">
-                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                    aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-            </div>
+        <!-- ideas end  -->
 
-        </div>
-    </div>
-    <!-- ideas end  -->
-
-
+    </main>
     <!-- footer start  -->
 
     <footer class="bg-dark text-white pb-1 ">
@@ -196,11 +196,11 @@
 
             </div>
         </div>
-        <div class="fcredit text-center">
+        <!-- <div class="fcredit text-center">
             <p>
                 Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
             </p>
-        </div>
+        </div> -->
     </footer>
 
     <!-- footer end  -->
