--- a/web.html
+++ b/web.html
@@ -68,24 +68,22 @@
     <main>
         <div class="card mb-3 border-0">
             <div class="row g-0">
-                <div class="col-md-4">
+                <div class="col-lg-4 ">
                     <img src="img/2020_6_largeimg_2106819729-removebg-preview.png" class="img-fluid rounded-start"
                         alt="...">
                 </div>
-                <div class="">
+                <div class="col-lg-8">
                     <div class="card-body">
                         <h4 class="card-title">Web Developer</h4>
                         <p class="card-text">Our website builder helps bring your unique vision to life—no design or
                             code
                             experience required. Create a customizable, mobile-optimized website within the hour.
-                            All
-                            you
-                            need to start is a domain name and a vision for your website. If you're building a small
+                            All you need to start is a domain name and a vision for your website. If you're building a
+                            small
                             business website, online store, or otherwise, Mailchimp can simplify the process
                             experience required. Create a customizable, mobile-optimized website within the hour.
-                            All
-                            you
-                            need to start is a domain name and a vision for your website. If you're building a small
+                            All you need to start is a domain name and a vision for your website. If you're building a
+                            small
                             business website, online store, or otherwise, Mailchimp can simplify the process.</p>
                         <!-- <a href="web.html" class="btn btn-primary">Read More</a> -->
 
@@ -120,10 +118,8 @@
         </div>
         <div class="card mb-3 border-0 ">
             <div class="row g-0">
-                <div class="offset-md-8 col-md-4 ">
-                    <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="">
+
+                <div class="col-lg-8">
                     <div class="card-body">
                         <h4 class="card-title">App Developer</h4>
                         <p class="card-text">Our website builder helps bring your unique vision to life—no design or
@@ -164,6 +160,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class=" col-lg-4 ">
+                    <img src="img/web_developer.jpeg-removebg-preview.png" class="img-fluid rounded-start" alt="...">
                 </div>
             </div>
         </div>
@@ -219,11 +218,7 @@
 
             </div>
         </div>
-        <div class="fcredit text-center">
-            <p>
-                Copyright @2022 All rights reserved | This template is made with by Ajaypal singh.
-            </p>
-        </div>
+
     </footer>
 
 
